crates/vouched/tests/ui/vouched/range_float_for_integer.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(range(0.5..=10.5))]
struct IntegerRange(i32);

fn main() {}
